chore: add secret key for JWT token generation in .env-template

--- a/.env-template
+++ b/.env-template
@@ -7,3 +7,5 @@ DB_PASSWORD=
 # JDBC connection URL for PostgreSQL
 # Format: jdbc:postgresql://<host>:<port>/<database_name>
 JDBC_CONNECTION_URL=
+# Secret key to generate jwt tokens
+SECRET_KEY=
