feat: add JWT security configuration properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,11 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+aplication.security.jwt.secret-key=${SECRET_KEY}
+# Time in milliseconds before an access token expires.
+# 86,400,000 ms = 24 hours.
+aplication.security.jwt.expiration=86400000
+# Time in milliseconds before a refresh token expires.
+# 604,800,000 ms = 7 days.
+aplication.security.jwt.refresh-token-expiration=604800000
