--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     image: postgres:15
     restart: always
     ports:
-      - "5433:5432"
+      - "5432:5432"
     environment:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
@@ -13,3 +13,17 @@ services:
     container_name: notes_db
     volumes:
       - ./postgres:/var/lib/postgresql/data
+
+  app:
+    build: .
+    container_name: notes_app
+    restart: always
+    ports:
+      - "8080:8080"
+    environment:
+      JDBC_CONNECTION_URL: ${JDBC_CONNECTION_URL}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      SECRET_KEY: ${SECRET_KEY}
+    depends_on:
+      - db
