feat: update docker-compose.yaml to manage the app and db

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
     container_name: notes_db
 
   app:
-    build: .
+    image: mircoestefanopilcoperalta/notes_app:snapshot-0.0.1-candidate
     container_name: notes_app
     restart: always
     ports:
