feat: enable forwarding headers strategy for proxy support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ aplication.security.jwt.expiration=86400000
 # 604,800,000 ms = 7 days.
 aplication.security.jwt.refresh-token-expiration=604800000
 
+# Enable Spring to use forwarded headers (like X-Forwarded-Proto) when behind a proxy or load balancer.
+server.forward-headers-strategy=framework
